# udv-summer-camp-test

./: Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.tests.yml  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: code-quality.yml  tests.yml
docker/: Dockerfile.dev  Dockerfile.prod  Dockerfile.tests  entrypoint.sh
src/: app.py  config.py  schemas.py  utils.py
src/api/: __init__.py
src/api/v1/: __init__.py  dependencies.py
src/api/v1/routers/: __init__.py  news.py
tests/: conftest.py  test_news.py
